# brein

./: .gitignore  LICENSE  README.md  brain-mcp.sh  brain.mcp.json  changelog.md  eval_retrieval.py  pyproject.toml  rerank.py  server.py  shared.py  telemetry.py  vector.py
.github/workflows/: auto-tag-changelog.yml  publish.yml  test.yml
evals/: company_brain_retrieval_eval_cases.json
examples/: brain.mcp.json  eval-cases.example.json
npm/: README.md  package.json
scripts/: brain-mcp.sh  eval_retrieval.py
src/brain_mcp/: __init__.py  _hooks.py  _policy.py  _synth_check.py  _user_config.py  cli.py  config.py  consistency.py  doctor.py  eval.py  evolve.py  index_state.py  index_worker.py  mcp_install.py  mcp_snippet.py  rerank.py  server.py  setup.py  shared.py  telemetry.py  vector.py
src/brain_mcp/_scripts/: eval_retrieval.py  generate_index.py  validate_docs.py
tests/: conftest.py  test_append_mode.py  test_brain_read.py  test_concurrency.py  test_daemon_env_silent_failures.py  test_e2e.py  test_evidence_audit.py  test_evolve.py  test_external_edits.py  test_frontmatter.py  test_http_transport.py  test_index_corruption.py  test_path_security.py  test_post_rank_boost.py  test_pull_ff.py  test_rerank.py  test_setup_smoke.py
