[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain-mcp"
version = "0.5.0"
description = "A policy-aware MCP server for an org-wide knowledge brain that lives in a git repo."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "brein" }]
dependencies = [
  "mcp>=1.0.0",
  "fastembed>=0.7.0",
  "questionary>=2.0.0",
  "tomli-w>=1.0.0",
]

[project.scripts]
brain-mcp = "brain_mcp.server:main"
brein = "brain_mcp.cli:main"
brain-eval = "brain_mcp._scripts.eval_retrieval:main"

[project.urls]
Homepage = "https://brein.sh"
Repository = "https://github.com/brein-sh/brein"

[tool.hatch.build.targets.wheel]
packages = ["src/brain_mcp"]
