[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brein-mcp"
dynamic = ["version"]
description = "A policy-aware MCP server for an org-wide knowledge brain that lives in a git repo."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "brein" }]
dependencies = [
  "mcp>=1.0.0",
  "fastembed>=0.7.0",
  "questionary>=2.0.0",
  "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
brain-mcp = "brain_mcp.server:main"
brein = "brain_mcp.cli:main"
brain-eval = "brain_mcp._scripts.eval_retrieval:main"

[project.urls]
Homepage = "https://brein.sh"
Repository = "https://github.com/brein-sh/brein"

[tool.hatch.version]
# Version is the latest `## [X.Y.Z] - YYYY-MM-DD` heading in changelog.md.
# Single source of truth — auto-tag-changelog.yml reads the same heading
# and the publish.yml tag must match. Bumping a version means: add a new
# heading to changelog.md, push, done.
source = "regex"
path = "changelog.md"
pattern = '^## \[(?P<version>\d+\.\d+\.\d+)\]'

[tool.hatch.build.targets.wheel]
packages = ["src/brain_mcp"]
